--- a/css/mb.css
+++ b/css/mb.css
@@ -1,12 +1,3 @@
-* {
-    list-style-type:none; 
-    margin: 0;
-    padding: 0;
-    outline: none;
-    border: 0;
-    border-style: none;
-}
-
 #nav { 
     min-width: 320px;
     width: 100%;
@@ -127,7 +118,7 @@ h2.title {
 }
 
 .contact_left input, .contact_left textarea {
-    width: 92%;
+    width: 100%;
     border: none;
     background: rgba(216,216,216,0.10);
     box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.10);
